[package]
name = "ledger-map"
version = "0.4.0"
edition = "2021"
description = "A Rust-based key-value map, for append-only data storage. Data integrity is protected with SHA-256 checksums, and cross-compiles to wasm32 for smart contract applications."
license = "MIT OR Apache-2.0"
documentation = "https://github.com/decent-cloud/ledger-map"
readme = "README.md"
homepage = "https://github.com/decent-cloud/ledger-map"
repository = "https://github.com/decent-cloud/ledger-map"

[lib]
name = "ledger_map"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.91"
ahash = { version = "0.8.11", default-features = false, features = [
    "compile-time-rng",
] }
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
borsh = { version = "1.5.1", features = ["derive"] }
flate2 = { version = "1.0", features = [
    "rust_backend",
], default-features = false }
hex = "0.4.3"
indexmap = "2.6.0"
lazy_static = "1.5.0"
serde = { version = "1.0.213", features = ["derive"] }
sha2 = "0.10.8"

[target.'cfg(target_arch = "x86_64")'.dependencies]
clap = "4.5.20"
fs-err = "3.0.0"
log = "0.4.22"
dirs = "5.0.1"
env_logger = "0.11.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
ic-cdk = "0.16.0"
ic-cdk-timers = "0.10.0"
ic-canister-log = "0.2.0"

[dev-dependencies]
tempfile = "3.13.0"
